# OpenIntentOS

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  install.ps1  install.sh
.github/workflows/: auto-release.yml  docs.yml  release.yml
config/: IDENTITY.md  SOUL.md  default.toml
crates/openintent-adapters/: Cargo.toml
crates/openintent-adapters/src/: browser.rs  calendar.rs  cron.rs  daily_briefing.rs  discord.rs  email.rs  error.rs  feishu.rs  filesystem.rs  github.rs  http_request.rs  lib.rs  memory_tools.rs  shell.rs  telegram.rs  traits.rs  web_fetch.rs  web_search.rs
crates/openintent-adapters/src/mqtt/: mod.rs
crates/openintent-adapters/src/skills/: mod.rs
crates/openintent-adapters/src/sqlite/: adapter.rs  connection.rs  error.rs  migration.rs  migrations.rs  mod.rs  query.rs
crates/openintent-adapters/src/telegram_oauth/: mod.rs
crates/openintent-adapters/tests/: e2e_briefing.rs  integration.rs
crates/openintent-agent/: Cargo.toml
crates/openintent-agent/src/: compaction.rs  error.rs  evolution.rs  executor.rs  lib.rs  orchestrator.rs  planner.rs  runtime.rs
crates/openintent-agent/src/config/: auth.rs  mod.rs
crates/openintent-agent/src/llm/: client.rs  mod.rs  router.rs  streaming.rs  streaming_openai.rs  types.rs
crates/openintent-agent/src/memory/: auto_memory.rs  mod.rs
crates/openintent-agent/tests/: e2e_orchestrator.rs  integration.rs
crates/openintent-auth-engine/: Cargo.toml
crates/openintent-auth-engine/src/: callback.rs  device_code.rs  error.rs  lib.rs  manager.rs  oauth.rs
crates/openintent-cli/: Cargo.toml
crates/openintent-cli/src/: adapters.rs  bot.rs  bot_config.rs  bot_helpers.rs  bridge.rs  cli.rs  dev_commands.rs  dev_worker.rs  failover.rs  helpers.rs  intent_classifier.rs  main.rs  messages.rs  model_switch.rs  onboarding.rs  repl.rs  self_repair.rs  self_update_adapter.rs  task_router.rs  update.rs
crates/openintent-intent/: Cargo.toml
crates/openintent-intent/src/: error.rs  lib.rs  parser.rs  scheduler.rs  trigger.rs  workflow.rs
crates/openintent-kernel/: Cargo.toml
crates/openintent-kernel/src/: error.rs  ipc.rs  lib.rs  registry.rs  router.rs  scheduler.rs
crates/openintent-kernel/tests/: integration.rs
crates/openintent-sandbox/: Cargo.toml
crates/openintent-sandbox/src/: adapter.rs  config.rs  error.rs  lib.rs  loader.rs  plugin.rs  runtime.rs
crates/openintent-skills/: Cargo.toml
crates/openintent-skills/src/: adapter.rs  error.rs  lib.rs  loader.rs  manager.rs  parser.rs  registry.rs  types.rs
crates/openintent-skills/src/email-automation/: batch_process.py  config.yaml
crates/openintent-store/: Cargo.toml
crates/openintent-store/src/: bot_state.rs  cache.rs  db.rs  dev_task_store.rs  dev_task_store_tests.rs  error.rs  lib.rs  memory.rs  migration.rs  session.rs  user_store.rs  workflow_store.rs
crates/openintent-store/tests/: integration.rs
crates/openintent-tui/: Cargo.toml
crates/openintent-tui/src/: app.rs  error.rs  lib.rs  run.rs  ui.rs
crates/openintent-ui/: Cargo.toml
crates/openintent-ui/src/: app.rs  chat.rs  error.rs  launcher.rs  lib.rs  theme.rs
crates/openintent-vault/: Cargo.toml
crates/openintent-vault/src/: crypto.rs  error.rs  keychain.rs  lib.rs  policy.rs  store.rs
crates/openintent-vault/tests/: integration.rs
crates/openintent-web/: Cargo.toml
crates/openintent-web/src/: api.rs  frontend.rs  lib.rs  mcp.rs  server.rs  setup.rs  state.rs  ws.rs
crates/openintent-web/tests/: e2e_setup.rs  integration.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
crates/skills/src/collector/: mod.rs
crates/skills/src/email_oauth/: mod.rs
data/: openintent.db-shm  openintent.db-wal
deploy/: TARGETS.md  com.openintent.bot.plist  install.sh  openintent.service  watchdog.sh
docs/: architecture.html  configuration.html  getting-started.html  index.html
docs/assets/: style.css
skills/daily-briefing/: SKILL.md
skills/email-automation/: SKILL.md  classify.py
skills/email-oauth-chat/: README.md  setup.sh
skills/email-oauth-setup/: setup.sh  skill.md
skills/ip-lookup/: SKILL.md  lookup.sh
skills/twitter-manager/: README.md
skills/video-clip-maker/: SKILL.md  video-clip-maker.py
skills/weather-check/: SKILL.md
skills/web-search-plus/: SKILL.md
