[package]
name = "openintent-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Service adapters for OpenIntentOS"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
openintent-vault = { workspace = true }
openintent-store = { workspace = true }
