[package]
name = "openintent-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Service adapters for OpenIntentOS"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
openintent-vault = { workspace = true }
openintent-store = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-native-tls = "0.3"
native-tls = "0.2"
base64 = { workspace = true }
futures = { workspace = true }
moka = { workspace = true }
readability = { version = "0.3", default-features = false }
html2text = "0.16"
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
