[package]
name = "openintent-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Service adapters for OpenIntentOS"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
openintent-vault = { workspace = true }
openintent-store = { workspace = true }
openintent-auth-engine = { workspace = true }
openintent-agent = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
base64 = { workspace = true }
futures = { workspace = true }
moka = { workspace = true }
readability = { version = "0.3", default-features = false }
html2text = "0.16"
regex = { workspace = true }

# MQTT support
rumqttc = "0.25"

# SQLite support
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

[dev-dependencies]
tempfile = { workspace = true }
