[package]
name = "openintent-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI agent runtime for OpenIntentOS — ReAct loop, LLM client, planning"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
openintent-kernel = { workspace = true }
openintent-store = { workspace = true }
skills = { path = "../skills" }

[dev-dependencies]
serde_json = { workspace = true }
uuid = { workspace = true }
