[package]
name = "openintent-intent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Intent parsing and workflow engine for OpenIntentOS"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
openintent-agent = { workspace = true }
openintent-kernel = { workspace = true }
