[package]
name = "openintent-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Micro-kernel for OpenIntentOS — scheduler, IPC, intent router"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
aho-corasick = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rkyv = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
