[package]
name = "openintent-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly plugin sandbox for OpenIntentOS"

[dependencies]
wasmtime = "29"
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
openintent-adapters = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
