[package]
name = "openintent-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Iced desktop GUI for OpenIntentOS"

[dependencies]
iced = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
openintent-agent = { workspace = true }
