[package]
name = "openintent-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Encrypted credential vault for OpenIntentOS — AES-256-GCM, keychain, policies"

[dependencies]
ring = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
