[package]
name = "openintent-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web server and API for OpenIntentOS"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
openintent-agent = { workspace = true }
openintent-adapters = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
